--- a/mvc/CI-Platform/CI-Platform-web/Views/VolunteeringTimesheet/VolunteeringTimesheet.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/VolunteeringTimesheet/VolunteeringTimesheet.cshtml
@@ -47,8 +47,8 @@
 
                                             <div class="mb-3">
                                                 <label for="MissionNameLabel" class="form-label">Mission</label>
-                                                <select asp-for="TimeViewModel.MissionId" type="text" class="form-select TimesheetSelection">
-
+                                                <select asp-for="TimeViewModel.MissionId" type="text" class="form-select TimesheetSelection" id="TimeAddSelection">
+                                                    <option selected disabled> Select Mission Title</option>
                                                     @if (Model.GetMissionTitles.Any())
                                                     {
                                                         @foreach (var mission_list in Model.GetMissionTitles.Where(m => m.Mission.MissionType == "Time"))
@@ -99,8 +99,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="time-mission-entry-card table-responsive">
-                        <table id="timeTable" class="table  align-middle">
+                    <div class="time-mission-entry-card table-responsive-xxl">
+                        <table id="timeTable" class="table align-middle ">
                             <thead>
                                 <tr>
                                     <td>Mission</td>
@@ -118,7 +118,7 @@
                                     @foreach (var time_missions in Model.GetTimesheetData.Where(m => m.Mission.MissionType == "Time"))
                                     {
                                         <tr>
-                                            <td class="scrollable p-0">@time_missions.Mission.Title</td>
+                                            <td >@time_missions.Mission.Title</td>
                                             <td >@time_missions.DateVolunteered.ToShortDateString()</td>
                                             <td>@time_missions.Time.Value.ToString("hh")</td>
                                             <td>@time_missions.Time.Value.ToString("mm")</td>
@@ -152,56 +152,7 @@
                                                     </div>
                                                 </div>
 
-                                                @* <button class="btn p-0 EditButtonDataFetch" id="EditButtonDataFetch" data-timesheet-id="@time_missions.TimesheetId" data-bs-toggle="modal" data-bs-target="#GoalAddEntryModal">
-                                        <i style="color: #F88634;" class="bi bi-pencil-square"></i>
-                                        </button>*@
-                                                <!-- Modal for edit time entry modal  -->
-                                                @*<div class="modal fade" id="TimeEditEntryModal" tabindex="-1"
-                                        aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered">
-                                        <div class="modal-content">
-                                        <div class="modal-header">
-                                        <p class="modal-title fs-5" id="exampleModalLabel">Please Edit below Volunteering Hours</p>
-                                        <button type="button" class="btn-close " data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                        <div class="mb-3">
-                                        <label for="MissionNameLabel" class="form-label">Mission</label>
-                                        <select type="text" class="form-select TimesheetSelection ">
-                                        <option id="GetMissionTitle"></option>
-                                        </select>
-                                        </div>
-                                        <div class="mb-3">
-                                        <label for="" class="form-label">Date Volunteered</label>
-                                        <input type="date" class="form-control" id="EditTimeDate" placeholder="Enter Date">
-                                        </div>
-                                        <div class="row">
-                                        <div class="col-md-6">
-                                        <label for="MissionHours" class="form-label">Hours</label>
-                                        <input type="text" id="EditMissionHours" class="form-control" placeholder="Enter Spent Hours" aria-label="First name">
-                                        </div>
-                                        <div class="col-md-6">
-                                        <label for="MissionMinutes" class="form-label">Minutes</label>
-                                        <input type="text" id="EditMissionMinutes" class="form-control" placeholder="Enter Spent Minutes" aria-label="First name">
-                                        </div>
-                                        </div>
-                                        <div class="mb-3">
-                                        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                                        <textarea class="form-control" id="EditMissionMessage" placeholder="Enter Your Message" id="TimeMessageTextarea" rows="3"></textarea>
-                                        </div>
-                                        <div class="mb-3 d-flex justify-content-end">
-                                        <button type="button" class=" me-3 btn rounded-pill btn-outline-secondary"
-                                        data-bs-dismiss="modal">
-                                        Cancel
-                                        </button>
-                                        <button type="button" class="btn card-btn">Submit</button>
-                                        </div>
-                                        </div>
-
-                                        </div>
-                                        </div>
-                                        </div>*@
+                                              
 
                                             </td>
                                         </tr>
@@ -210,7 +161,11 @@
                                 else
                                 {
                                     <tr>
-                                        <td class="border-0">Please enter your volunteering details!!!</td>
+                                        <td colspan="4" class="border-0">Please enter your volunteering details!!!</td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
                                     </tr>
                                 }
                             </tbody>
@@ -238,7 +193,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <p class="modal-title fs-5" id="exampleModalLabel">Please Input below Volunteering Goal</p>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        <button type="button" class="btn-close " data-bs-dismiss="modal"
                                                 aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
@@ -248,14 +203,12 @@
 
                                             <div class="mb-3">
                                                 <label for="MissionNameLabel" class="form-label">Mission</label>
-                                                <select asp-for="GoalViewModel.MissionId" type="text" class="form-select TimesheetSelection " id="GoalAddSelection">
-
+                                                <select asp-for="GoalViewModel.MissionId"  type="text" class="form-select TimesheetSelection " id="GoalAddSelection">
+                                                    <option selected disabled> Select Mission Title </option>
                                                     @if (Model.GetMissionTitles.Any())
                                                     {
                                                         @foreach (var mission_list in Model.GetMissionTitles.Where(m => m.Mission.MissionType == "Goal"))
                                                         {
-
-
                                                             <option id="GoalMissionSelectionDropdown" value="@mission_list.Mission.MissionId">@mission_list.Mission.Title</option>
                                                         }
                                                     }
@@ -297,7 +250,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="goal-mission-entry-card table-responsive ">
+                    <div class="goal-mission-entry-card table-responsive-xxl">
                         <table id="goalTable" class="table align-middle">
                             <thead>
                                 <tr>
@@ -346,47 +299,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <!-- Modal for edit  goal entry -->
-                                                @* <div class="modal fade" id="GoalEditEntryModal" tabindex="-1"
-                                        aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered">
-                                        <div class="modal-content">
-                                        <div class="modal-header">
-                                        <p class="modal-title fs-5" id="exampleModalLabel">Please Edit below Volunteering Goal</p>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                        <div class="mb-3">
-                                        <label for="MissionNameLabel" class="form-label">Mission</label>
-                                        <select type="text" class="form-select" id="MissionName" value="" disabled readonly>
-                                        <option></option>
-                                        </select>
-                                        </div>
-                                        <div class="mb-3">
-                                        <label for="GoalActionsLabel" class="form-label">Actions</label>
-                                        <input type="text" class="form-control" id="GoalActions" placeholder="Enter Actions">
-                                        </div>
-                                        <div class="mb-3">
-                                        <label for="" class="form-label">Date Volunteered</label>
-                                        <input type="date" class="form-control" id="GoalDate" placeholder="Enter Date">
-                                        </div>
-                                        <div class="mb-3">
-                                        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                                        <textarea class="form-control" placeholder="Enter Your Message" id="GoalMessageTextarea" rows="3"></textarea>
-                                        </div>
-                                        <div class="mb-3 d-flex justify-content-end">
-                                        <button type="button" class=" me-3 btn rounded-pill btn-outline-secondary"
-                                        data-bs-dismiss="modal">
-                                        Cancel
-                                        </button>
-                                        <button type="button" class="btn card-btn">Submit</button>
-                                        </div>
-                                        </div>
-
-                                        </div>
-                                        </div>
-                                        </div>*@
+                                                
 
                                             </td>
                                         </tr>
@@ -395,60 +308,13 @@
                                 else
                                 {
                                     <tr>
-                                        <td class="border-0">Please enter your volunteering details!!!</td>
+                                        <td colspan="3" class="border-0">Please enter your volunteering details!!!</td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
                                     </tr>
                                 }
-                                @* <tr>
-                                <td>Education</td>
-                                <td>05/02/2023</td>
-                                <td>1</td>
-                                <td>
-                                <i style="color: #F88634;" class="bi bi-pencil-square" data-bs-toggle="modal"
-                                data-bs-target="#GoalEditEntryModal"></i>
-                                <div class="modal fade" id="GoalEditEntryModal" tabindex="-1"
-                                aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-centered">
-                                <div class="modal-content">
-                                <div class="modal-header">
-                                <p class="modal-title fs-5" id="exampleModalLabel">Please Edit below Volunteering Goal</p>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                <div class="mb-3">
-                                <label for="MissionNameLabel" class="form-label">Mission</label>
-                                <select type="text" class="form-select" id="MissionName" value="" disabled readonly>
-                                <option></option>
-                                </select>
-                                </div>
-                                <div class="mb-3">
-                                <label for="GoalActionsLabel" class="form-label">Actions</label>
-                                <input type="text" class="form-control" id="GoalActions" placeholder="Enter Actions">
-                                </div>
-                                <div class="mb-3">
-                                <label for="" class="form-label">Date Volunteered</label>
-                                <input type="date" class="form-control" id="GoalDate" placeholder="Enter Date">
-                                </div>
-                                <div class="mb-3">
-                                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                                <textarea class="form-control" placeholder="Enter Your Message" id="GoalMessageTextarea" rows="3"></textarea>
-                                </div>
-                                <div class="mb-3 d-flex justify-content-end">
-                                <button type="button" class=" me-3 btn rounded-pill btn-outline-secondary"
-                                data-bs-dismiss="modal">
-                                Cancel
-                                </button>
-                                <button type="button" class="btn card-btn">Submit</button>
-                                </div>
-                                </div>
-
-                                </div>
-                                </div>
-                                </div>
-                                <i class="bi bi-trash"></i>
-                                </td>
-                                </tr>*@
-                            </tbody>
+                                
                         </table>
                     </div>
 
@@ -467,6 +333,7 @@
 <script src="https://cdn.datatables.net/responsive/2.4.0/js/responsive.bootstrap5.min.js"></script>
 <script>
     $('#timeTable').DataTable({
+        scrollX: false,
         lengthChange: false,
         paging: false,
         searching: false,
@@ -481,6 +348,7 @@
     });
 
     $('#goalTable').DataTable({
+        scrollX: false,
         lengthChange: false,
         paging: false,
         searching: false,
