--- a/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
+++ b/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
@@ -173,6 +173,9 @@ a,li,button,h3 {
 .card-img-top {
     box-shadow: 5px 4px 8px 5px rgba(0, 0, 0, 0.2), 5px 6px 20px 5px rgba(0, 0, 0, 0.10);
 }
+.card-img img{
+    height:300px;
+}
 .listView-card-details {
     flex: 1 1 auto;
     padding: 0rem 2rem 0 2rem ;
@@ -787,10 +790,10 @@ a,li,button,h3 {
 /* end drag drop css */
 
 /* ck editor */
-.options {
+. /*options {
     display: flex;
     flex-wrap: wrap;
-    /* align-items: center; */
+     align-items: center; 
     gap: 15px;
 }
 
@@ -832,20 +835,9 @@ a,li,button,h3 {
 
 .dropdown-toggle::after {
     margin-left: 9px !important;
-}
+}*/
 /*share story page ends*/
 
-/*story details page starts*/
-.views-capsule {
-    border-radius: 25%;
-    width: fit-content;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border:1px solid #E8E8E8;
-    border-radius: 19px;
-    color: #757575;
-    padding:  0.5rem 1.5rem;
-}
-/*story details page ends*/
 
 /*user profile page starts*/
 .validate-text {
@@ -1026,3 +1018,13 @@ tbody, td, tfoot, th, thead, tr {
             padding-left: 1.5rem;
         }
     }
+/*story details page starts*/
+#capsule-views {
+    width: fit-content;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #E8E8E8;
+    border-radius: 19px;
+    color: #757575;
+    padding: 0.5rem 1.5rem;
+}
+/*story details page ends*/
