--- a/mvc/CI-Platform/CI-Platform-web/Views/Story/StoryDetails.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Story/StoryDetails.cshtml
@@ -84,8 +84,8 @@
                                         <div class="iframe-wrapper">
                                             <iframe style="width:100%; height:100%" src="@GetEmbededUrl(@slider_img.Path)" frameborder="0"  allow=" encrypted-media" allowfullscreen></iframe>
                                         </div>
-                                    </div>
 
+                                    </div>
                                 }
                                 @* else
                     {
@@ -109,7 +109,7 @@
                     <div class="ms-2"> @Model.GetStoryDetails.User.City.CityName,  @Model.GetStoryDetails.User.Country.Name  </div>
                 </div>
                 <div class="align-self-end my-4">
-                    <div class="views-capsule">
+                    <div id="capsule-views">
                         <img src="~/images/eye.png" />
                         <span>@Model.GetStoryDetails.UserVisits</span>
                         Views
